[package]
name = "w4v"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
hound = "3.5.1"
js-sys = "0.3.69"
clap = { version = "4.4.18", features = ["derive"] }   # WAV read/write
imp = "0.1.0"
rand = { version = "0.8" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
